[tool.poetry]
name = "cnstr"
version = "2.0.0a0"
description = "An async wrapper for the Canister API"
authors = ["TheRealKeto <therealketo@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/TheRealKeto/cnstr"
packages = [{ include = "canister" }]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
ruff = "^0.0.270"

[tool.mypy]
python_version = "3.8"

[tool.ruff]
select = [
   "E",
   "F",
   "W",
   "N",
   "Q"
]
line-length = 75
show-source = true
target-version = "py38"
per-file-ignores = { "objects.py" = ["N815"] }

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
